# hass-thz

./: .gitignore  README.md  __init__.py  config_flow.py  coordinator.py  entity.py  hacs.json  manifest.json  number.py  pyproject.toml  select.py  sensor.py  switch.py  test_connection.py  thz_device.py  thz_protocol.py  time.py
archive/: 00_THZ.pm
custom_components/hass_thz/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  thz_protocol.py
custom_components/hass_thz/translations/: de.json  en.json
custom_components/thz/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  sensor_meta.py  strings.json  switch.py  thz_device.py  thz_protocol.py  time.py
custom_components/thz/register_maps/: readings_map_206.py  readings_map_2xx.py  readings_map_439.py
custom_components/thz/translations/: de.json  en.json
register_maps/: readings_map_206.py  readings_map_214.py  readings_map_214j.py  readings_map_2xx.py  readings_map_439.py  readings_map_539.py  register_map_206.py  register_map_214.py  register_map_214j.py  register_map_all.py  register_map_manager.py  write_map_206.py  write_map_214.py  write_map_439.py  write_map_439_539.py  write_map_539.py  write_map_X39tech.py
scripts/: dump_registers.py
tests/: __init__.py  conftest.py  test_live.py  test_protocol.py
tests/fixtures/: README.md  registers_20251205_212345.json
tests/unit/: test_thz_device.py
translations/: de.json
